@@ -43,6 +43,15 @@ typedef unsigned short u16int;
 typedef unsigned char u8int;
 typedef unsigned long uintptr;
 
+typedef signed char	int8;
+typedef unsigned char	uint8;
+typedef short	int16;
+typedef unsigned short	uint16;
+typedef int	int32;
+typedef unsigned int	uint32;
+typedef long long	int64;
+typedef unsigned long long	uint64;
+
 /* handle conflicts with host os libs */
 #define	getwd	infgetwd
 #define scalb	infscalb
@@ -50,7 +59,6 @@ typedef unsigned long uintptr;
 #define panic	infpanic
 #define rint	infrint
 #define	rcmd	infrcmd
-#undef isnan
 #define	pow10	infpow10
 
 #ifndef EMU
