@@ -7,3 +7,4 @@ TARGFILES=\
 	setbinmode-Nt.$O\
 	lock-Nt-386.$O\
 	pread-Nt.$O\
+	isnan-posix.$O\
